--- a/slides/lgpd2.html
+++ b/slides/lgpd2.html
@@ -395,8 +395,12 @@ José de Jesus Filho
 <h2>Artigo 3º: Comentário</h2>
 <ul>
 <li>A operação de tratamento é realizada no território nacional: Isso significa que qualquer empresa ou órgão, independente de sua nacionalidade, que tratar dados pessoais dentro do Brasil estará sujeito à LGPD.</li>
-<li>A atividade de tratamento tem por objetivo a oferta ou o fornecimento de bens ou serviços ou o tratamento de dados de indivíduos localizados no território nacional: Ou seja, mesmo que a empresa esteja localizada no exterior, se ela oferece produtos ou serviços para consumidores brasileiros ou trata dados de brasileiros, a LGPD será aplicada.<br>
-</li>
+<li>A atividade de tratamento tem por objetivo a oferta ou o fornecimento de bens ou serviços ou o tratamento de dados de indivíduos localizados no território nacional: Ou seja, mesmo que a empresa esteja localizada no exterior, se ela oferece produtos ou serviços para consumidores brasileiros ou trata dados de brasileiros, a LGPD será aplicada.</li>
+</ul>
+</section>
+<section id="artigo-3º-comentário-1" class="slide level2">
+<h2>Artigo 3º: Comentário</h2>
+<ul>
 <li>Os dados pessoais objeto do tratamento tenham sido coletados no território nacional: Neste caso, a lei se aplica mesmo que a empresa esteja localizada no exterior e não ofereça produtos ou serviços no Brasil, desde que os dados tenham sido coletados no território nacional.</li>
 </ul>
 </section>
@@ -411,30 +415,30 @@ José de Jesus Filho
 <blockquote>
 <p>II - realizado para fins exclusivamente:</p>
 </blockquote>
-<ol type="a">
-<li class="fragment">jornalístico e artísticos; ou</li>
-</ol>
-<ol start="2" type="a">
-<li class="fragment">acadêmicos, aplicando-se a esta hipótese os arts. 7º e 11 desta Lei;</li>
-</ol>
+<blockquote>
+<p>a) jornalístico e artísticos; ou</p>
+</blockquote>
+<blockquote>
+<p>b) acadêmicos, aplicando-se a esta hipótese os arts. 7º e 11 desta Lei;</p>
+</blockquote>
 </section>
 <section id="artigo-4º-1" class="slide level2">
 <h2>Artigo 4º</h2>
 <blockquote>
 <p>III - realizado para fins exclusivos de:</p>
 </blockquote>
-<ol type="a">
-<li class="fragment">segurança pública;</li>
-</ol>
-<ol start="2" type="a">
-<li class="fragment">defesa nacional;</li>
-</ol>
-<ol start="3" type="a">
-<li class="fragment">segurança do Estado; ou</li>
-</ol>
-<ol start="4" type="a">
-<li class="fragment">atividades de investigação e repressão de infrações penais; ou</li>
-</ol>
+<blockquote>
+<p>a) segurança pública;</p>
+</blockquote>
+<blockquote>
+<p>b) defesa nacional;</p>
+</blockquote>
+<blockquote>
+<p>c) segurança do Estado; ou</p>
+</blockquote>
+<blockquote>
+<p>d) atividades de investigação e repressão de infrações penais; ou</p>
+</blockquote>
 </section>
 <section id="artigo-4º-2" class="slide level2">
 <h2>Artigo 4º</h2>
@@ -444,11 +448,14 @@ José de Jesus Filho
 <blockquote>
 <p>§ 1º O tratamento de dados pessoais previsto no inciso III será regido por legislação específica, que deverá prever medidas proporcionais e estritamente necessárias ao atendimento do interesse público, observados o devido processo legal, os princípios gerais de proteção e os direitos do titular previstos nesta Lei.</p>
 </blockquote>
+</section>
+<section id="artigo-4º-3" class="slide level2">
+<h2>Artigo 4º</h2>
 <blockquote>
 <p>§ 2º É vedado o tratamento dos dados a que se refere o inciso III do caput deste artigo por pessoa de direito privado, exceto em procedimentos sob tutela de pessoa jurídica de direito público, que serão objeto de informe específico à autoridade nacional e que deverão observar a limitação imposta no § 4º deste artigo.</p>
 </blockquote>
 </section>
-<section id="artigo-4º-3" class="slide level2">
+<section id="artigo-4º-4" class="slide level2">
 <h2>Artigo 4º</h2>
 <blockquote>
 <p>§ 3º A autoridade nacional emitirá opiniões técnicas ou recomendações referentes às exceções previstas no inciso III do caput deste artigo e deverá solicitar aos responsáveis relatórios de impacto à proteção de dados pessoais.</p>
@@ -462,7 +469,12 @@ José de Jesus Filho
 <ul>
 <li><p>Ao tratamento realizado por pessoa natural para fins exclusivamente particulares e não econômicos: O tratamento de dados pessoais em âmbito pessoal e sem finalidade comercial está fora do escopo da lei.</p></li>
 <li><p>Ao tratamento realizado para fins exclusivamente jornalísticos, artísticos ou acadêmicos: A liberdade de expressão e o desenvolvimento científico são protegidos, e o tratamento de dados para esses fins possui algumas particularidades.</p></li>
-<li><p>Ao tratamento realizado para fins exclusivos de segurança pública, defesa nacional, segurança do Estado ou atividades de investigação e repressão de infrações penais: Esses casos são regidos por legislação específica, que deve prever medidas proporcionais e necessárias ao atendimento do interesse público.</p></li>
+</ul>
+</section>
+<section id="a-lgpd-não-se-aplica-1" class="slide level2">
+<h2>A LGPD não se aplica:</h2>
+<ul>
+<li>Ao tratamento realizado para fins exclusivos de segurança pública, defesa nacional, segurança do Estado ou atividades de investigação e repressão de infrações penais: Esses casos são regidos por legislação específica, que deve prever medidas proporcionais e necessárias ao atendimento do interesse público.</li>
 </ul>
 </section>
 <section id="artigo-5º" class="slide level2">
@@ -476,15 +488,18 @@ José de Jesus Filho
 <blockquote>
 <p>II - dado pessoal sensível: dado pessoal sobre origem racial ou étnica, convicção religiosa, opinião política, filiação a sindicato ou a organização de caráter religioso, filosófico ou político, dado referente à saúde ou à vida sexual, dado genético ou biométrico, quando vinculado a uma pessoa natural;</p>
 </blockquote>
-<blockquote>
-<p>III - dado anonimizado: dado relativo a titular que não possa ser identificado, considerando a utilização de meios técnicos razoáveis e disponíveis na ocasião de seu tratamento;</p>
-</blockquote>
 </section>
 <section id="artigo-5º-1" class="slide level2">
 <h2>Artigo 5º</h2>
 <blockquote>
+<p>III - dado anonimizado: dado relativo a titular que não possa ser identificado, considerando a utilização de meios técnicos razoáveis e disponíveis na ocasião de seu tratamento;</p>
+</blockquote>
+<blockquote>
 <p>IV - banco de dados: conjunto estruturado de dados pessoais, estabelecido em um ou em vários locais, em suporte eletrônico ou físico;</p>
 </blockquote>
+</section>
+<section id="artigo-5º-2" class="slide level2">
+<h2>Artigo 5º</h2>
 <blockquote>
 <p>V - titular: pessoa natural a quem se referem os dados pessoais que são objeto de tratamento;</p>
 </blockquote>
@@ -495,7 +510,7 @@ José de Jesus Filho
 <p>VII - operador: pessoa natural ou jurídica, de direito público ou privado, que realiza o tratamento de dados pessoais em nome do controlador;</p>
 </blockquote>
 </section>
-<section id="artigo-5º-2" class="slide level2">
+<section id="artigo-5º-3" class="slide level2">
 <h2>Artigo 5º</h2>
 <blockquote>
 <p>VIII - encarregado: pessoa indicada pelo controlador e operador para atuar como canal de comunicação entre o controlador, os titulares dos dados e a Autoridade Nacional de Proteção de Dados (ANPD); (Redação dada pela Lei nº 13.853, de 2019) Vigência</p>
@@ -503,6 +518,9 @@ José de Jesus Filho
 <blockquote>
 <p>IX - agentes de tratamento: o controlador e o operador;</p>
 </blockquote>
+</section>
+<section id="artigo-5º-4" class="slide level2">
+<h2>Artigo 5º</h2>
 <blockquote>
 <p>X - tratamento: toda operação realizada com dados pessoais, como as que se referem a coleta, produção, recepção, classificação, utilização, acesso, reprodução, transmissão, distribuição, processamento, arquivamento, armazenamento, eliminação, avaliação ou controle da informação, modificação, comunicação, transferência, difusão ou extração;</p>
 </blockquote>
@@ -510,7 +528,7 @@ José de Jesus Filho
 <p>XI - anonimização: utilização de meios técnicos razoáveis e disponíveis no momento do tratamento, por meio dos quais um dado perde a possibilidade de associação, direta ou indireta, a um indivíduo;</p>
 </blockquote>
 </section>
-<section id="artigo-5º-3" class="slide level2">
+<section id="artigo-5º-5" class="slide level2">
 <h2>Artigo 5º</h2>
 <blockquote>
 <p>XII - consentimento: manifestação livre, informada e inequívoca pela qual o titular concorda com o tratamento de seus dados pessoais para uma finalidade determinada;</p>
@@ -518,6 +536,9 @@ José de Jesus Filho
 <blockquote>
 <p>XIII - bloqueio: suspensão temporária de qualquer operação de tratamento, mediante guarda do dado pessoal ou do banco de dados;</p>
 </blockquote>
+</section>
+<section id="artigo-5º-6" class="slide level2">
+<h2>Artigo 5º</h2>
 <blockquote>
 <p>XIV - eliminação: exclusão de dado ou de conjunto de dados armazenados em banco de dados, independentemente do procedimento empregado;</p>
 </blockquote>
@@ -525,7 +546,7 @@ José de Jesus Filho
 <p>XV - transferência internacional de dados: transferência de dados pessoais para país estrangeiro ou organismo internacional do qual o país seja membro;</p>
 </blockquote>
 </section>
-<section id="artigo-5º-4" class="slide level2">
+<section id="artigo-5º-7" class="slide level2">
 <h2>Artigo 5º</h2>
 <blockquote>
 <p>XVI - uso compartilhado de dados: comunicação, difusão, transferência internacional, interconexão de dados pessoais ou tratamento compartilhado de bancos de dados pessoais por órgãos e entidades públicos no cumprimento de suas competências legais, ou entre esses e entes privados, reciprocamente, com autorização específica, para uma ou mais modalidades de tratamento permitidas por esses entes públicos, ou entre entes privados;</p>
@@ -534,7 +555,7 @@ José de Jesus Filho
 <p>XVII - relatório de impacto à proteção de dados pessoais: documentação do controlador que contém a descrição dos processos de tratamento de dados pessoais que podem gerar riscos às liberdades civis e aos direitos fundamentais, bem como medidas, salvaguardas e mecanismos de mitigação de risco;</p>
 </blockquote>
 </section>
-<section id="artigo-5º-5" class="slide level2">
+<section id="artigo-5º-8" class="slide level2">
 <h2>Artigo 5º</h2>
 <blockquote>
 <p>XVIII - órgão de pesquisa: órgão ou entidade da administração pública direta ou indireta ou pessoa jurídica de direito privado sem fins lucrativos legalmente constituída sob as leis brasileiras, com sede e foro no País, que inclua em sua missão institucional ou em seu objetivo social ou estatutário a pesquisa básica ou aplicada de caráter histórico, científico, tecnológico ou estatístico; e</p>
