--- a/slides/lpgd4.html
+++ b/slides/lpgd4.html
@@ -345,6 +345,9 @@
 <blockquote>
 <p>III - pela administração pública, para o tratamento e uso compartilhado de dados necessários à execução de políticas públicas previstas em leis e regulamentos ou respaldadas em contratos, convênios ou instrumentos congêneres, observadas as disposições do Capítulo IV desta Lei;</p>
 </blockquote>
+</section>
+<section class="slide level2">
+
 <blockquote>
 <p>IV - para a realização de estudos por órgão de pesquisa, garantida, sempre que possível, a anonimização dos dados pessoais;</p>
 </blockquote>
@@ -352,8 +355,11 @@
 <p>V - quando necessário para a execução de contrato ou de procedimentos preliminares relacionados a contrato do qual seja parte o titular, a pedido do titular dos dados;</p>
 </blockquote>
 <blockquote>
-<p>VI - para o exercício regular de direitos em processo judicial, administrativo ou arbitral, esse último nos termos da Lei nº 9.307, de 23 de setembro de 1996 (Lei de Arbitragem) ;</p>
+<p>VI - para o exercício regular de direitos em processo judicial, administrativo ou arbitral, esse último nos termos da Lei nº 9.307, de 23 de setembro de 1996 (Lei de Arbitragem);</p>
 </blockquote>
+</section>
+<section id="artigo-7º" class="slide level2">
+<h2>Artigo 7º</h2>
 <blockquote>
 <p>VII - para a proteção da vida ou da incolumidade física do titular ou de terceiro;</p>
 </blockquote>
@@ -363,6 +369,9 @@
 <blockquote>
 <p>IX - quando necessário para atender aos interesses legítimos do controlador ou de terceiro, exceto no caso de prevalecerem direitos e liberdades fundamentais do titular que exijam a proteção dos dados pessoais; ou</p>
 </blockquote>
+</section>
+<section id="artigo-7º-1" class="slide level2">
+<h2>Artigo 7º</h2>
 <blockquote>
 <p>X - para a proteção do crédito, inclusive quanto ao disposto na legislação pertinente.</p>
 </blockquote>
@@ -372,12 +381,18 @@
 <blockquote>
 <p>§ 4º É dispensada a exigência do consentimento previsto no caput deste artigo para os dados tornados manifestamente públicos pelo titular, resguardados os direitos do titular e os princípios previstos nesta Lei.</p>
 </blockquote>
+</section>
+<section id="artigo-7º-2" class="slide level2">
+<h2>Artigo 7º</h2>
 <blockquote>
 <p>§ 5º O controlador que obteve o consentimento referido no inciso I do caput deste artigo que necessitar comunicar ou compartilhar dados pessoais com outros controladores deverá obter consentimento específico do titular para esse fim, ressalvadas as hipóteses de dispensa do consentimento previstas nesta Lei.</p>
 </blockquote>
 <blockquote>
 <p>§ 6º A eventual dispensa da exigência do consentimento não desobriga os agentes de tratamento das demais obrigações previstas nesta Lei, especialmente da observância dos princípios gerais e da garantia dos direitos do titular.</p>
 </blockquote>
+</section>
+<section id="artigo-7º-3" class="slide level2">
+<h2>Artigo 7º</h2>
 <blockquote>
 <p>§ 7º O tratamento posterior dos dados pessoais a que se referem os §§ 3º e 4º deste artigo poderá ser realizado para novas finalidades, desde que observados os propósitos legítimos e específicos para o novo tratamento e a preservação dos direitos do titular, assim como os fundamentos e os princípios previstos nesta Lei.</p>
 </blockquote>
