--- a/slides/lgpd6.html
+++ b/slides/lgpd6.html
@@ -391,7 +391,7 @@ José de Jesus Filho
 <section id="comentários-sobre-o-artigo-14-2" class="slide level2">
 <h2>Comentários sobre o Artigo 14</h2>
 <blockquote>
-<p>Este artigo, portanto, complementa e fortalece as proteções já estabelecidas no Estatuto da Criança e do Adolescente (ECA), garantindo que, no ambiente digital, os direitos das crianças e adolescentes sejam igualmente respeitados.</p>
+<p>Este artigo complementa e fortalece as proteções já estabelecidas no Estatuto da Criança e do Adolescente (ECA), garantindo que, no ambiente digital, os direitos das crianças e adolescentes sejam igualmente respeitados.</p>
 </blockquote>
 </section>
 <section id="artigo-15---término-do-tratamento-de-dados" class="slide level2">
@@ -512,8 +512,8 @@ José de Jesus Filho
 <p>Acesso a Dados pelo Poder Público (Artigo 27): O acesso a dados pessoais por parte do Poder Público deve ser restrito e necessário para a realização das atividades da administração pública, seguindo os princípios da finalidade e da necessidade.</p>
 </blockquote>
 </section>
-<section id="encarregado-pelo-tratamento-de-dados" class="slide level2">
-<h2>Encarregado pelo Tratamento de Dados</h2>
+<section id="encarregado-pelo-tratamento-de-dados-ou-dpo-data-protection-officer" class="slide level2">
+<h2>Encarregado pelo Tratamento de Dados ou DPO (Data Protection Officer)</h2>
 <p>Art. 41. O controlador deverá indicar encarregado pelo tratamento de dados pessoais.</p>
 <p>§ 1º A identidade e as informações de contato do encarregado deverão ser divulgadas publicamente, de forma clara e objetiva, preferencialmente no sítio eletrônico do controlador.</p>
 </section>
@@ -528,6 +528,21 @@ José de Jesus Filho
 <section class="slide level2">
 
 <p>§ 3º A autoridade nacional poderá estabelecer normas complementares sobre a definição e as atribuições do encarregado, inclusive hipóteses de dispensa da necessidade de sua indicação, conforme a natureza e o porte da entidade ou o volume de operações de tratamento de dados.</p>
+</section>
+<section id="resolução-cdanpd-nº-18-de-16-de-julho-de-2024" class="slide level2">
+<h2>RESOLUÇÃO CD/ANPD Nº 18, DE 16 DE JULHO DE 2024</h2>
+<ul>
+<li><p>Indicação formal por escrito do encarregado (Art 3º).</p></li>
+<li><p>Agentes de Tratamento de Pequeno Porte devem disponibilizar um canal de comunicação (Art. 3, § 3º).</p></li>
+<li><p>Autonomia técnica: O encarregado deve ter autonomia técnica para cumprir suas funções, sem interferências indevidas. O controlador deve fornecer os meios necessários para o desempenho de suas atribuições. (Art. 10, inc. III)</p></li>
+</ul>
+</section>
+<section class="slide level2">
+
+<ul>
+<li><p>Conflito de interesses: O encarregado deve evitar conflitos de interesse em suas funções, declarando qualquer situação que possa configurar esse tipo de problema. O agente de tratamento tem a obrigação de evitar designar uma pessoa para a função de encarregado se houver potencial de conflito.</p></li>
+<li><p>Habilidades: Gestão, Direito e TI.</p></li>
+</ul>
 <div class="footer footer-default">
 
 </div>
