--- a/slides/crimes_digitais.html
+++ b/slides/crimes_digitais.html
@@ -342,9 +342,8 @@
 <li>Ambiente globalizado</li>
 </ol>
 </section>
-<section>
-<section id="convenção-de-budapeste-sobre-cibercrime" class="title-slide slide level1 center">
-<h1>Convenção de Budapeste sobre Cibercrime</h1>
+<section id="convenção-de-budapeste-sobre-cibercrime" class="slide level2">
+<h2>Convenção de Budapeste sobre Cibercrime</h2>
 <p>A <strong>Convenção de Budapeste sobre o Cibercrime</strong>, também conhecida como <strong>Convenção sobre Cibercrime do Conselho da Europa</strong>, é o primeiro tratado internacional criado para combater crimes cibernéticos.</p>
 </section>
 <section class="slide level2">
@@ -492,7 +491,7 @@
 <div class="footer footer-default">
 
 </div>
-</section></section>
+</section>
     </div>
   </div>
 
